# medical-document-assistant

./: .dockerignore  .env  .env.example  .env.template  .gitignore  Dockerfile  README.md  REORGANIZATION_COMPLETE.md  STATUS_REPORT.md  TESTING_GUIDE.md  api.py  app.py  auth.py  config.py  docker-compose.ollama.yml  docker-compose.yml  document_processor.py  pyproject.toml  requirements.txt  setup-ollama.sh  start.sh  test_ollama.py  test_pdf_upload.sh
mcp_server/: MCP_SETUP.md  README.md  __init__.py  mcp_config.json  mcp_server.py  test_comprehensive.py  test_integration.py
mcp_server/src/: __init__.py  resources.py  server.py  tools.py
src/: __init__.py  document_processor.py
src/api/: __init__.py  main.py  test_routes.py
src/auth/: __init__.py  auth.py
src/document_digestion/: __init__.py  processor.py
src/llm/: __init__.py  chat.py  qa_chain.py
src/vector_store/: __init__.py  chroma_store.py  chroma_store_persistent.py  embeddings.py
test/: TESTING_GUIDE.md  test_ollama.py  test_ollama.sh  test_pdf_upload.sh
